[modified]dropdownのlink_to修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -28,9 +28,9 @@
         </li>
 
         <li class="nav-item dropdown dropdown-slide">
-          <%= link_to '#',class: 'nav-link','data-toggle': :dropdown ,'aria-haspopup': 'true','aria-expanded': false,id: 'header-profile' do %>
-          <%= image_tag("sample.jpg",class: 'rounded-circle mr15',:width => "40",:height => "40") %>
-          <% end %>
+          <a href='#' class='nav-link' data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id="header-profile">
+            <img class="rounded-circle mr15" src="sample.jpg" width="40" height="40" />
+          </a>
           <div class="dropdown-menu dropdown-menu-right">
             <div class='dropdown-item'>らんてっく たろう</div>
             <div class="dropdown-divider"></div>
