--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -26,7 +26,7 @@
           <%= form.submit :commit, class: 'btn btn-primary', 'data-disable-with': "登録" %>
       <% end %>
       <div class='text-center'>
-        <%= link_to "ログインページへ", 'login_path' %>
+        <%= link_to "ログインページへ", login_path %>
       </div>
     </div>
   </div>
