--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-      <h1><%= t 'views.users.new.user_create' %></h1>
+      <h1><%= t('.user_create') %></h1>
       <%= form_with model: @user, local: true do |form| %>
         <div class="form-group">
           <label for="user_last_name"><%= User.human_attribute_name(:last_name) %></label>
@@ -26,7 +26,7 @@
           <%= form.submit :commit, class: 'btn btn-primary', 'data-disable-with': "登録" %>
       <% end %>
       <div class='text-center'>
-        <%= link_to t('views.users.new.login_page'), login_path %>
+        <%= link_to t('.login_page'), login_path %>
       </div>
     </div>
   </div>
