--- a/app/views/boards/_single_board.html.erb
+++ b/app/views/boards/_single_board.html.erb
@@ -1,3 +1,4 @@
+<% @boards.each do |board| %>
 <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
   <div id="product-id-33">
     <div class="card">
@@ -6,7 +7,7 @@
            height="200" />
       <div class="card-body">
         <h4 class="card-title">
-          <a href="/boards/33">タイトル32</a>
+          <a href="#"><%= board.title %></a>
         </h4>
         <div style='display: inline; float: right;'>
           <a id="btn-bookmark-33" data-remote="true" rel="nofollow" data-method="post"
@@ -18,15 +19,16 @@
         <ul class="list-inline">
           <li class="list-inline-item">
             <i class="fa fa-user"></i>
-            小野 凛
+            <%= board.user_id %>
           </li>
           <li class="list-inline-item">
             <i class="fa fa-calendar"></i>
-            2019/05/09 17:11
+            <%= l board.created_at, format: :short %>
           </li>
         </ul>
-        <p class="card-text">本文32</p>
+        <p class="card-text"><%= board.body %></p>
       </div>
     </div>
   </div>
 </div>
+<% end %>
