--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,7 +18,7 @@
           <% end %>
 
           <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to "掲示板一覧", "#", class: "dropdown-item" %>
+            <%= link_to "掲示板一覧", boards_index_path, class: "dropdown-item" %>
             <%= link_to "掲示板作成", "#", class: "dropdown-item" %>
           </div>
         </li>
