--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -29,7 +29,7 @@
 
         <li class="nav-item dropdown dropdown-slide">
           <%= link_to '#', class: 'nav-link', 'data-toggle': :dropdown, 'aria-haspopup': true, 'aria-expanded': false, id: 'header-profile' do %>
-            <%= image_tag("sample.jpg", class: 'rounded-circle mr15', :width => "40", :height => "40") %>
+            <%= image_tag("sample.jpg", class: 'rounded-circle mr15', width: "40", height: "40") %>
           <% end %>
           <div class="dropdown-menu dropdown-menu-right">
             <div class='dropdown-item'><%= current_user.decorate.full_name %></div>
