--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -2,14 +2,14 @@
 <div class="col-sm-12 col-md-6 col-lg-4 mb-3">
   <div id="product-id-33">
     <div class="card">
-      <%= image_tag("sample.jpg", class: "card-img-top", :width => "300", :height => "200") %>
+      <%= image_tag('sample.jpg', class: 'card-img-top', width: '300', height: '200') %>
       <div class="card-body">
         <h4 class="card-title">
-          <%=link_to board.title, "#" %>
+          <%=link_to board.title, '#' %>
         </h4>
         <div class="bookmark">
-          <%= link_to "#", id: 'bookmark-link', 'data-remote': true, rel: 'nofollow', method: :post do %>
-            <i class="fa fa-star-o"></i>
+          <%= link_to '#', id: 'bookmark-link', 'data-remote': true, rel: 'nofollow', method: :post do %>
+            <i class='fa fa-star-o'></i>
           <% end %>
         </div>
 
