--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,8 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
 
-    <%= link_to root_path,class: "navbar-brand" do %>
-      <%= image_tag "logo.png" %>
+    <%= link_to root_path,class: 'navbar-brand' do %>
+      <%= image_tag 'logo.png' %>
     <% end %>
     <button class='navbar-toggler' data-toggle='collapse' data-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
       <span class="navbar-toggler-icon"></span>
@@ -11,7 +11,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ml-auto main-nav align-items-center">
         <li class="nav-item">
-          <%= link_to "ログイン", login_path, class: "nav-link" %>
+          <%= link_to 'ログイン', login_path, class: 'nav-link' %>
         </li>
       </ul>
     </div>
