--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,29 +1,29 @@
 
-<div class="col-sm-12 col-md-6 col-lg-4 mb-3">
-  <div id="product-id-33">
-    <div class="card">
+<div class='col-sm-12 col-md-6 col-lg-4 mb-3'>
+  <div id='product-id-33'>
+    <div class='card'>
       <%= image_tag('sample.jpg', class: 'card-img-top', width: '300', height: '200') %>
-      <div class="card-body">
-        <h4 class="card-title">
+      <div class='card-body'>
+        <h4 class='card-title'>
           <%=link_to board.title, '#' %>
         </h4>
-        <div class="d-inline float-right">
+        <div class='d-inline float-right'>
           <%= link_to '#', id: 'bookmark-link', 'data-remote': true, rel: 'nofollow', method: :post do %>
             <i class='fa fa-star-o'></i>
           <% end %>
         </div>
 
-        <ul class="list-inline">
-          <li class="list-inline-item">
-            <i class="fa fa-user"></i>
+        <ul class='list-inline'>
+          <li class='list-inline-item'>
+            <i class='fa fa-user'></i>
             <%= board.user_id %>
           </li>
-          <li class="list-inline-item">
-            <i class="fa fa-calendar"></i>
+          <li class='list-inline-item'>
+            <i class='fa fa-calendar'></i>
             <%= l board.created_at, format: :short %>
           </li>
         </ul>
-        <p class="card-text"><%= board.body %></p>
+        <p class='card-text'><%= board.body %></p>
       </div>
     </div>
   </div>
