--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,12 +1,12 @@
-<div class="container pt-3">
-  <div class="row">
-    <div class="col-lg-10 offset-lg-1">
+<div class='container pt-3'>
+  <div class='row'>
+    <div class='col-lg-10 offset-lg-1'>
       <!-- 検索フォーム -->
       <form>
-        <div class="input-group mb-3">
-          <input class="form-control" placeholder="検索ワード" type="search" />
-          <div class="input-group-append">
-            <input type="submit" name="commit" value="検索" class="btn btn-primary" data-disable-with="検索" />
+        <div class='input-group mb-3'>
+          <input class='form-control' placeholder='検索ワード' type='search' />
+          <div class='input-group-append'>
+            <input type='submit' name='commit' value='検索' class='btn btn-primary' data-disable-with='検索' />
           </div>
         </div>
       </form>
@@ -14,11 +14,11 @@
   </div>
 
   <!-- 掲示板一覧 -->
-  <div class="row">
-    <div class="col-12">
-      <div class="row">
+  <div class='row'>
+    <div class='col-12'>
+      <div class='row'>
         <% if @boards.empty? %>
-          <%= "掲示板はありません" %>
+          <%= '掲示板はありません' %>
         <% else %>
           <%= render @boards %>
         <% end %>
