--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,8 +1,8 @@
 <header>
   <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
 
-    <%= link_to root_path, class: "navbar-brand" do %>
-    <%= image_tag "logo.png" %>
+    <%= link_to root_path, class: 'navbar-brand' do %>
+    <%= image_tag 'logo.png' %>
     <% end %>
     <button class='navbar-toggler' data-toggle='collapse' data-target='#navbarSupportedContent'
       aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
@@ -18,8 +18,8 @@
           <% end %>
 
           <div class="dropdown-menu dropdown-menu-right">
-            <%= link_to "掲示板一覧", boards_path, class: "dropdown-item" %>
-            <%= link_to "掲示板作成", "#", class: "dropdown-item" %>
+            <%= link_to '掲示板一覧', boards_path, class: 'dropdown-item' %>
+            <%= link_to '掲示板作成', '#', class: 'dropdown-item' %>
           </div>
         </li>
 
