シングル修正

--- a/app/views/shared/_before_login_header.html.erb
+++ b/app/views/shared/_before_login_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
+  <nav class='navbar navbar-expand-lg navigation navbar-light bg-light'>
 
     <%= link_to root_path,class: 'navbar-brand' do %>
       <%= image_tag 'logo.png' %>
@@ -8,9 +8,9 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto main-nav align-items-center">
-        <li class="nav-item">
+    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+      <ul class='navbar-nav ml-auto main-nav align-items-center'>
+        <li class='nav-item'>
           <%= link_to 'ログイン', login_path, class: 'nav-link' %>
         </li>
       </ul>
