--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-lg navigation navbar-light bg-light">
+  <nav class='navbar navbar-expand-lg navigation navbar-light bg-light'>
 
     <%= link_to root_path, class: 'navbar-brand' do %>
     <%= image_tag 'logo.png' %>
@@ -9,31 +9,31 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto main-nav align-items-center">
-        <li class="nav-item dropdown dropdown-slide">
-          <%= link_to '#', class: "nav-link dropdown-toggle", 'data-toggle': :dropdown, 'aria-haspopup': true,
+    <div class='collapse navbar-collapse' id='navbarSupportedContent'>
+      <ul class='navbar-nav ml-auto main-nav align-items-center'>
+        <li class='nav-item dropdown dropdown-slide'>
+          <%= link_to '#', class: 'nav-link dropdown-toggle', 'data-toggle': :dropdown, 'aria-haspopup': true,
             'aria-expanded': false do %>
             掲示板
           <% end %>
 
-          <div class="dropdown-menu dropdown-menu-right">
+          <div class='dropdown-menu dropdown-menu-right'>
             <%= link_to '掲示板一覧', boards_path, class: 'dropdown-item' %>
-            <%= link_to '掲示板作成', '#', class: 'dropdown-item' %>
+            <%= link_to '掲示板作成', new_board_path, class: 'dropdown-item' %>
           </div>
         </li>
 
-        <li class="nav-item">
+        <li class='nav-item'>
           <%= link_to 'ブックマーク一覧', '#', class: 'nav-link' %>
         </li>
 
-        <li class="nav-item dropdown dropdown-slide">
+        <li class='nav-item dropdown dropdown-slide'>
           <%= link_to '#', class: 'nav-link', 'data-toggle': :dropdown, 'aria-haspopup': true, 'aria-expanded': false, id: 'header-profile' do %>
             <%= image_tag('sample.jpg', class: 'rounded-circle mr15', width: '40', height: '40') %>
           <% end %>
-          <div class="dropdown-menu dropdown-menu-right">
+          <div class='dropdown-menu dropdown-menu-right'>
             <div class='dropdown-item'><%= current_user.decorate.full_name %></div>
-            <div class="dropdown-divider"></div>
+            <div class='dropdown-divider'></div>
             <%= link_to 'プロフィール', '#', class: 'dropdown-item'%>
             <%= link_to 'ログアウト', logout_path, class: 'dropdown-item', method: :post %>
           </div>
