--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,29 +1,29 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
+<div class='container'>
+  <div class='row'>
+    <div class='col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
       <h1><%= t('.user_create') %></h1>
       <%= form_with model: @user, local: true do |form| %>
-        <div class="form-group">
-          <label for="user_last_name"><%= User.human_attribute_name(:last_name) %></label>
-          <%= form.text_field :last_name, class: 'form-control' %>
+        <div class='form-group'>
+          <label for='user_last_name'><%= User.human_attribute_name(:last_name) %></label>
+          <%= form.text_field :last_name, class: 'form-control', id: 'user_last_name' %>
         </div>
-        <div class="form-group">
-          <label for="user_first_name"><%= User.human_attribute_name(:first_name) %></label>
+        <div class='form-group'>
+          <label for='user_first_name'><%= User.human_attribute_name(:first_name) %></label>
           <%= form.text_field :first_name, class: 'form-control' ,id: 'user_first_name'%>
         </div>
-        <div class="form-group">
-          <label for="user_email"><%= User.human_attribute_name(:email) %></label>
+        <div class='form-group'>
+          <label for='user_email'><%= User.human_attribute_name(:email) %></label>
           <%= form.email_field :email, class: 'form-control' ,id: 'user_email' %>
         </div>
-        <div class="form-group">
-          <label for="user_password"><%= User.human_attribute_name(:password) %></label>
+        <div class='form-group'>
+          <label for='user_password'><%= User.human_attribute_name(:password) %></label>
           <%= form.password_field :password, class: 'form-control', id: 'user_password' %>
         </div>
-        <div class="form-group">
-          <label for="user_password_confirmation"><%= User.human_attribute_name(:Password_confirmation) %></label>
+        <div class='form-group'>
+          <label for='user_password_confirmation'><%= User.human_attribute_name(:Password_confirmation) %></label>
           <%= form.password_field :password_confirmation, class: 'form-control', id: 'user_password_confirmation' %>
         </div>
-          <%= form.submit :commit, class: 'btn btn-primary', 'data-disable-with': "登録" %>
+          <%= form.submit :commit, class: 'btn btn-primary', 'data-disable-with': '登録' %>
       <% end %>
       <div class='text-center'>
         <%= link_to t('.login_page'), login_path %>
