--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,13 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-lg-8 offset-lg-2'>
-      <ul>
-        <% @board.errors.full_messages.each do |message| %>
-          <div class='alert alert-danger'>
-            <li><%= message %></li>
-          </div>
-        <% end %>
-      </ul>
+      <%= render 'shared/boards_errors' %>
       <h1><%= t('.boards_create') %></h1>
       <%= form_with(url: boards_path, model: @board, local: true) do |form| %>
         <div class='form-group'>
