--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,13 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <div class='alert alert-danger'>
-          <li><%= message %></li>
-        </div>
-      <% end %>
-      </ul>
+      <%= render 'shared/users_errors' %>
       <h1><%= t('.user_create') %></h1>
       <%= form_with model: @user, local: true do |form| %>
         <div class='form-group'>
