--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class='container'>
   <div class='row'>
     <div class='col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
-      <%= render 'shared/users_errors' %>
+      <%= render partial: 'shared/errors_messages', locals: {board: @board, user: @user} %>
       <h1><%= t('.user_create') %></h1>
       <%= form_with model: @user, local: true do |form| %>
         <div class='form-group'>
