[modify]パーシャル修正

--- a/app/views/shared/_errors_messages.html.erb
+++ b/app/views/shared/_errors_messages.html.erb
@@ -1,19 +1,9 @@
-<% if board %>
+<% if object.errors.any? %>
 <ul>
-  <% board.errors.full_messages.each do |message| %>
+  <% object.errors.full_messages.each do |message| %>
     <div class='alert alert-danger'>
       <li><%= message %></li>
     </div>
   <% end %>
 </ul>
-<% end %>
-
-<% if user %>
-  <ul>
-    <% user.errors.full_messages.each do |message| %>
-      <div class='alert alert-danger'>
-        <li><%= message %></li>
-      </div>
-    <% end %>
-  </ul>
 <% end %>
