--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -12,6 +12,30 @@
           <label for='board_body'><%= t('.boards_text') %></label>
         <%= form.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
         </div>
+        <%= form.file_field :board_image, class: 'form-control', id: :board_img %>
+        <script type="text/javascript">
+            $(function(){
+                function readURL(input) {
+                    if (input.files && input.files[0]) {
+                        var reader = new FileReader();
+                        reader.onload = function (e) {
+                            $('#img_prev').attr('src', e.target.result);
+                        }
+                        reader.readAsDataURL(input.files[0]);
+                    }
+                }
+                $("#board_img").change(function(){
+                    readURL(this);
+                });
+            });
+        </script>
+        <div class='mt-3 mb-3'>
+        <% if @board.board_image.present? %>
+          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :img_prev, width: '100', heigth: '100' %>
+        <% else %>
+          <%= image_tag "sample.jpg", class: 'rounded-circle', id: :img_prev, width: '100', heigth: '100' %>
+        <% end %>
+        </div>
       <%= form.submit :commit, class: 'btn btn-primary', 'data-disable-with': '作成' %>
       <% end %>
     </div>
