--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -2,7 +2,7 @@
 <div class='col-sm-12 col-md-6 col-lg-4 mb-3'>
   <div id='product-id-33'>
     <div class='card'>
-      　<%= image_tag("#{board.board_image}", class: 'card-img-top', width: '300', height: '200') %>
+      　<%= image_tag("#{board.board_image}", class: 'card-img-top', size: '300x200') %>
       <div class='card-body'>
         <h4 class='card-title'>
           <%=link_to board.title, '#' %>
