--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -14,7 +14,7 @@
         </div>
         <%= form.file_field :board_image, class: 'form-control', id: :board_img %>
         <div class='mt-3 mb-3'>
-          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :img_prev, width: '100', heigth: '100' %>
+          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :img_prev, size: '100x100' %>
         </div>
         <%= form.submit :commit, class: 'btn btn-primary' %>
       <% end %>
