--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -12,9 +12,9 @@
           <label for='board_body'><%= t('.boards_text') %></label>
           <%= form.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
         </div>
-        <%= form.file_field :board_image, class: 'form-control', id: :board_img %>
+        <%= form.file_field :board_image, class: 'form-control', id: :js_board_img %>
         <div class='mt-3 mb-3'>
-          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :img_prev, size: '100x100' %>
+          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :js_img_prev, size: '100x100' %>
         </div>
         <%= form.submit :commit, class: 'btn btn-primary' %>
       <% end %>
