[modify]commitボタン修正

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,10 +21,10 @@
           <%= form.password_field :password, class: 'form-control', id: 'user_password' %>
         </div>
         <div class='form-group'>
-          <label for='user_password_confirmation'><%= User.human_attribute_name(:Password_confirmation) %></label>
+          <label for='user_password_confirmation'><%= User.human_attribute_name(:password_confirmation) %></label>
           <%= form.password_field :password_confirmation, class: 'form-control', id: 'user_password_confirmation' %>
         </div>
-          <%= form.submit :commit, class: 'btn btn-primary', 'data-disable-with': '登録' %>
+        <%= form.submit t('.register'), class: 'btn btn-primary', 'data-disable-with': t('.register') %>
       <% end %>
       <div class='text-center'>
         <%= link_to t('.login_page'), login_path %>
