--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -6,17 +6,17 @@
       <%= form_with(url: boards_path, model: @board, local: true) do |form| %>
         <div class='form-group'>
           <label for='board_title'><%= t('.boards_title') %></label>
-          <%= form.text_field :title, class: 'form-control', id: 'board_title' %>
+          <%= form.text_field :title, class: 'form-control', id: :'board_title' %>
         </div>
         <div class='form-group'>
           <label for='board_body'><%= t('.boards_text') %></label>
           <%= form.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
         </div>
-        <%= form.file_field :board_image, class: 'form-control', id: :js_board_img %>
+        <%= form.file_field :board_image, class: 'form-control', id: :'js-board-img' %>
         <div class='mt-3 mb-3'>
-          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :js_img_prev, size: '100x100' %>
+          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :'js-img-prev', size: '100x100' %>
         </div>
-        <%= form.submit :commit, class: 'btn btn-primary' %>
+        <%= form.submit t('.boards_post'), class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
