--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -12,9 +12,9 @@
           <label for='board_body'><%= t('.boards_text') %></label>
           <%= form.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
         </div>
-        <%= form.file_field :board_image, class: 'form-control', id: :'js-board-img' %>
+        <%= form.file_field :board_image, class: 'form-control', id: 'js-board-img' %>
         <div class='mt-3 mb-3'>
-          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: :'js-img-prev', size: '100x100' %>
+          <%= image_tag @board.board_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
         </div>
         <%= form.submit t('.boards_post'), class: 'btn btn-primary' %>
       <% end %>
