--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -5,7 +5,7 @@
       　<%= image_tag("#{board.board_image}", class: 'card-img-top', size: '300x200') %>
       <div class='card-body'>
         <h4 class='card-title'>
-          <%=link_to board.title, '#' %>
+          <%= link_to board.title, board_path(board.id) %>
         </h4>
         <div class='d-inline float-right'>
           <%= link_to '#', id: 'bookmark-link', 'data-remote': true, rel: 'nofollow', method: :post do %>
