--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -6,7 +6,7 @@
       <%= form_with(url: boards_path, model: @board, local: true) do |form| %>
         <div class='form-group'>
           <label for='board_title'><%= t('.boards_title') %></label>
-          <%= form.text_field :title, class: 'form-control', id: :'board_title' %>
+          <%= form.text_field :title, class: 'form-control', id: 'board_title' %>
         </div>
         <div class='form-group'>
           <label for='board_body'><%= t('.boards_text') %></label>
