--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,30 +1,30 @@
-<tr id="comment-25">
-  <td style="width: 60px">
+<tr id=<%= "comment-#{comment.board_id}" %>>
+  <td style='width: 60px'>
     <%= image_tag('sample.jpg', class: 'rounded-circle', width: '50', height: '50') %>
   </td>
   <td>
-    <h3 class="small"><%= comment.user.last_name %><%= comment.user.first_name %></h3>
-    <div id="js-comment-25">
+    <h3 class='small'><%= comment.user.last_name %><%= comment.user.first_name %></h3>
+    <div id=<%= "js-comment-#{comment.board_id}" %>>
       <p><%= comment.body %></p>
     </div>
-    <div style="display: none;">
+    <div style='display: none;'>
       <%= form_with(model: [@board, @comment], local: true) do |form| %>
         <%= form.text_area :body, class: 'form-control mb-1' %>
-        <button class="btn btn-light">キャンセル</button>
-        <button class="btn btn-success">更新</button>
+        <button class='btn btn-light'>キャンセル</button>
+        <button class='btn btn-success'>更新</button>
       <% end %>
     </div>
   </td>
   <!-- ボタン-->
   <% if comment.user_id == current_user.id %>
-    <td class="action">
-      <ul class="list-inline justify-content-center" style="float: right;">
-        <li class="list-inline-item">
-          <a href="#"><i class='fa fa-pencil'></i></a>
+    <td class='action'>
+      <ul class='list-inline justify-content-center' style='float: right;'>
+        <li class='list-inline-item'>
+          <a href='#'><i class='fa fa-pencil'></i></a>
         </li>
-        <li class="list-inline-item">
-          <a href="#">
-            <i class="fa fa-trash"></i>
+        <li class='list-inline-item'>
+          <a href='#'>
+            <i class='fa fa-trash'></i>
           </a>
         </li>
       </ul>
