[add]タイトルを動的に出力

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  掲示板のタイトル/RUNTEQ NORMAL APP
+<% end %>
 <div class='container pt-5'>
   <div class='row mb-3'>
     <div class='col-lg-8 offset-lg-2'>
