--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  トップ/RUNTEQ NORMAL APP
+<% end %>
 <div class='top-wrapper'>
   <div class='top-inner-text'>
     <h1>RUNTEQ BOARD APP</h1>
