--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  掲示板作成/RUNTEQ NORMAL APP
+<% end %>
 <div class='container'>
   <div class='row'>
     <div class='col-lg-8 offset-lg-2'>
