[modify]full_titleヘルパーの書き方へ変更

--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  掲示板のタイトル/RUNTEQ NORMAL APP
+  掲示板のタイトル
 <% end %>
 <div class='container pt-5'>
   <div class='row mb-3'>
