--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
+<% content_for :title do %>
+  ユーザー新規登録
+<% end %>
 <div class='container'>
   <div class='row'>
     <div class='col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
