--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,6 +1,6 @@
 
 <div class='col-sm-12 col-md-6 col-lg-4 mb-3'>
-  <div id='product-id-33'>
+  <div id=<%= "product-id-#{board.id}" %>>
     <div class='card'>
       　<%= image_tag("#{board.board_image}", class: 'card-img-top', size: '300x200') %>
       <div class='card-body'>
@@ -8,8 +8,17 @@
           <%= link_to board.title, board_path(board.id) %>
         </h4>
         <div class='d-inline float-right'>
-          <%= link_to '#', id: 'bookmark-link', 'data-remote': true, rel: 'nofollow', method: :post do %>
-            <i class='fa fa-star-o'></i>
+          <% if board.user_id == current_user.id %>
+            <%= link_to edit_board_path(board.id) do %>
+              <i class='fa fa-pencil'></i>
+            <% end %>
+            <%= link_to board_path(board.id), data: {confirm: '本当に実行して大丈夫ですか?'}, method: :delete do %>
+              <i class='fa fa-trash'></i>
+            <% end %>
+          <% else %>
+            <%= link_to '#', id: 'bookmark-link', 'data-remote': true, rel: 'nofollow', method: :post do %>
+              <i class='fa fa-star-o'></i>
+            <% end %>
           <% end %>
         </div>
 
