--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -1,6 +1,4 @@
-<% content_for :title do %>
-  掲示板のタイトル
-<% end %>
+<% content_for(:title, '掲示板のタイトル') %>
 <div class='container pt-5'>
   <div class='row mb-3'>
     <div class='col-lg-8 offset-lg-2'>
@@ -14,6 +12,13 @@
             </div>
             <div class='col-md-9'>
               <h3 style='display: inline;'><%= @board.title %></h3>
+              <div class='d-inline float-right'>
+                <% if current_user.own_board?(@board) %>
+                  <%= render 'boards/edit_destroy_button', board: @board %>
+                <% else %>
+                  <%= render 'boards/bookmark_button' %>
+                <% end %>
+              </div>
               <ul class='list-inline'>
                 <li class='list-inline-item'>by <%= @board.user_id %></li>
                 <li class='list-inline-item'>2<%= l @board.created_at, format: :short %></li>
