--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,4 @@
-<% content_for :title do %>
-  トップ
-<% end %>
+<% content_for(:title, 'トップ') %>
 <div class='top-wrapper'>
   <div class='top-inner-text'>
     <h1>RUNTEQ BOARD APP</h1>
