--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,4 @@
-<% content_for :title do %>
-  ユーザー新規登録
-<% end %>
+<% content_for(:title, 'ユーザー新規登録') %>
 <div class='container'>
   <div class='row'>
     <div class='col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
