[modify]エラーメッセージ表示部分修正（課題１４での実装漏れ）

--- a/app/views/shared/_errors_messages.html.erb
+++ b/app/views/shared/_errors_messages.html.erb
@@ -1,5 +1,5 @@
-<% if object.errors.any? %>
-  <% object.errors.full_messages.each do |message| %>
+<% if model.errors.any? %>
+  <% model.errors.full_messages.each do |message| %>
     <ul>
     <div class='alert alert-danger'>
       <li><%= message %></li>
