--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -11,7 +11,7 @@
           <% if current_user.own_board?(board) %>
             <%= render 'boards/edit_destroy_button', board: board %>
           <% else %>
-            <%= render 'boards/bookmark_button' %>
+            <%= render 'boards/bookmark_area', board: board %>
           <% end %>
         </div>
 
