[modify]blank?メソッド、bookmark_boardsメソッド、bookmark_board?メソッド修正

--- a/app/views/boards/_bookmark_area.html.erb
+++ b/app/views/boards/_bookmark_area.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.bookmarks_board?(board) %>
+<% if current_user.bookmark_board?(board) %>
   <%= render 'boards/unbookmark', board: board %>
 <% else %>
   <%= render 'boards/bookmark', board: board %>
