--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -18,10 +18,10 @@
   <div class='row'>
     <div class='col-12'>
       <div class='row'>
-        <% if @bookmarks_boards.empty? %>
+        <% if @bookmark_boards.blank? %>
           <%= '掲示板はありません' %>
         <% else %>
-          <%= render @bookmarks_boards %>
+          <%= render @bookmark_boards %>
         <% end %>
       </div>
     </div>
