--- a/app/views/boards/_edit_destroy_button.html.erb
+++ b/app/views/boards/_edit_destroy_button.html.erb
@@ -1,6 +1,4 @@
-<%= link_to edit_board_path(board.id) do %>
-  <i class='fa fa-pencil'></i>
+<%= link_to edit_board_path(board.id) do %><i class='fa fa-pencil'></i>
 <% end %>
-<%= link_to board_path(board.id), data: {confirm: '本当に実行して大丈夫ですか?'}, method: :delete do %>
-  <i class='fa fa-trash'></i>
+<%= link_to board_path(board.id), data: {confirm: '本当に実行して大丈夫ですか?'}, method: :delete do %><i class='fa fa-trash'></i>
 <% end %>
