--- a/app/views/boards/_bookmark_area.html.erb
+++ b/app/views/boards/_bookmark_area.html.erb
@@ -1,5 +1,7 @@
+<div id='bookmark_btn_<%= board.id %>'>
 <% if current_user.bookmark_board?(board) %>
-  <%= render 'boards/unbookmark', board: board %>
+    <%= render 'boards/unbookmark', board: board %>
 <% else %>
-  <%= render 'boards/bookmark', board: board %>
+    <%= render 'boards/bookmark', board: board %>
 <% end %>
+</div>
