--- a/app/views/boards/_unbookmark.html.erb
+++ b/app/views/boards/_unbookmark.html.erb
@@ -1,3 +1,3 @@
-<%= link_to bookmark_path(board.id), method: :delete do %>
+<%= link_to bookmark_path(board.id), method: :delete, remote: true do %>
   <i class='fa fa-star'></i>
 <% end %>
