--- a/app/views/boards/_bookmark.html.erb
+++ b/app/views/boards/_bookmark.html.erb
@@ -1,3 +1,5 @@
+<div id='bookmark_btn_<%= board.id %>'>
 <%= link_to bookmarks_path(board_id: board.id), method: :post, remote: true do %>
-  <i class='fa fa-star-o'></i>
+    <i class='fa fa-star-o'></i>
 <% end %>
+</div>
