[modify]インスタンス変数修正

--- a/app/views/bookmarks/destroy.js.erb
+++ b/app/views/bookmarks/destroy.js.erb
@@ -1,1 +1,1 @@
-$('#bookmark_btn_<%= board.id %>').html('<%= j(render 'boards/bookmark', board: board)%>');
+$('#bookmark_btn_<%= @board.id %>').html('<%= j(render 'boards/bookmark', board: @board)%>');
