--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,18 +1,18 @@
-<tr id=<%= "comment-#{comment.board_id}" %>>
+<tr id="comment-<%= comment.id %>">
   <td style='width: 60px'>
     <%= image_tag('sample.jpg', class: 'rounded-circle', width: '50', height: '50') %>
   </td>
   <td>
     <h3 class='small'><%= comment.user.last_name %><%= comment.user.first_name %></h3>
-    <div id=<%= "js-comment-#{comment.board_id}" %>>
+    <!--    コメント部分-->
+    <div id='js-comment-<%= comment.id %>'>
       <p><%= comment.body %></p>
     </div>
-    <div style='display: none;'>
-      <%= form_with(model: [@board, @comment], local: true) do |form| %>
-        <%= form.text_area :body, class: 'form-control mb-1' %>
-        <button class='btn btn-light'>キャンセル</button>
-        <button class='btn btn-success'>更新</button>
-      <% end %>
+    <!--    フォーム部分-->
+    <div style='display: none;' id='js-textarea-comment-box-<%= comment.id %>'>
+      <textarea id='js-textarea-comment-<%= comment.id %>' , class='form-control mb-1'><%= comment.body %></textarea>
+      <button class='btn btn-light js-button-comment-update' data-comment-id='<%= comment.id %>'>更新</button>
+      <button class='btn btn-success js-button-edit-comment-cancel' data-comment-id='<%= comment.id %>'>キャンセル</button>
     </div>
   </td>
   <!-- ボタン-->
@@ -20,12 +20,12 @@
     <td class='action'>
       <ul class='list-inline justify-content-center' style='float: right;'>
         <li class='list-inline-item'>
-          <a href='#'><i class='fa fa-pencil'></i></a>
+          <button data-id='<%= comment.id %>' class='btn js-edit-comment-button'><i class='fa fa-pencil'></i></button>
         </li>
         <li class='list-inline-item'>
-          <a href='#'>
+          <%= link_to comment_path(comment.id), method: :delete, remote: true do %>
             <i class='fa fa-trash'></i>
-          </a>
+          <% end %>
         </li>
       </ul>
     </td>
