--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -4,7 +4,7 @@
     <div class='col-lg-8 offset-lg-2'>
       <h1>掲示板詳細</h1>
       <!-- 掲示板内容 -->
-      <article class='card'>
+      <article class='js-comment-body'>
         <div class='card-body'>
           <div class='row'>
             <div class='col-md-3'>
@@ -32,7 +32,7 @@
   </div>
 </div>
 <div class='container pt-5'>
-  <%= render 'comments/comment_form' %>
+  <%= render 'comments/comment_form', {board: @board, comment: @comment} %>
 </div>
 <div class='container pt-5'>
   <%= render 'comments/comment_area' %>
