--- a/app/views/shared/_errors_messages.html.erb
+++ b/app/views/shared/_errors_messages.html.erb
@@ -1,6 +1,6 @@
 <% if model.errors.any? %>
   <% model.errors.full_messages.each do |message| %>
-    <ul>
+    <ul id='error_messages'>
     <div class='alert alert-danger'>
       <li><%= message %></li>
     </div>
