--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -3,14 +3,14 @@
   <div class='row'>
     <div class='col-lg-10 offset-lg-1'>
       <!-- 検索フォーム -->
-      <form>
+      <%= search_form_for @search do |f| %>
         <div class='input-group mb-3'>
-          <input class='form-control' placeholder='検索ワード' type='search' />
+          <%= f.search_field :title_or_body_cont, placeholder: "検索ワード", class: 'form-control' %>
           <div class='input-group-append'>
-            <input type='submit' name='commit' value='検索' class='btn btn-primary' data-disable-with='検索' />
+            <%= f.submit value: "検索", class: 'btn btn-primary' %>
           </div>
         </div>
-      </form>
+      <% end %>
     </div>
   </div>
 
