--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -3,14 +3,7 @@
   <div class='row'>
     <div class='col-lg-10 offset-lg-1'>
       <!-- 検索フォーム -->
-      <%= search_form_for @search do |f| %>
-        <div class='input-group mb-3'>
-          <%= f.search_field :title_or_body_cont, placeholder: "検索ワード", class: 'form-control' %>
-          <div class='input-group-append'>
-            <%= f.submit value: "検索", class: 'btn btn-primary' %>
-          </div>
-        </div>
-      <% end %>
+      <%= render 'boards/search_form_board', search: @search %>
     </div>
   </div>
 
