--- a/app/views/boards/bookmarks.html.erb
+++ b/app/views/boards/bookmarks.html.erb
@@ -3,7 +3,9 @@
   <div class='row'>
     <div class='col-lg-10 offset-lg-1'>
       <!-- 検索フォーム -->
-      <%= render 'boards/search_form_bookmarks', search: @search, url: bookmarks_boards_path %>
+      <%= search_form_for @search, url: bookmarks_boards_path do |f| %>
+        <%= render 'search_form', url: bookmarks_boards_path, f: f %>
+      <% end %>
     </div>
   </div>
   <!-- 掲示板一覧 -->
