--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -3,10 +3,11 @@
   <div class='row'>
     <div class='col-lg-10 offset-lg-1'>
       <!-- 検索フォーム -->
-      <%= render 'boards/search_form_board', search: @search %>
+      <%= search_form_for @search, url: boards_path do |f| %>
+        <%= render 'search_form', url: boards_path, f: f %>
+      <% end %>
     </div>
   </div>
-
   <!-- 掲示板一覧 -->
   <div class='row'>
     <div class='col-12'>
