--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: board, local: true) do |form| %>
+<%= form_with model: board, local: true do |form| %>
   <%= render 'shared/errors_messages', model: form.object %>
   <div class='form-group'>
     <label for='board_title'><%= t('.boards_title') %></label>
