[modify]translation_missing削除

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -8,7 +8,7 @@
         <tbody>
         <tr>
           <th scope='row'>
-            <span class='translation_missing' title='translation missing: ja.氏名'>
+            <span>
               <%= t('.email') %>
             </span>
           </th>
@@ -16,7 +16,7 @@
         </tr>
         <tr>
           <th scope='row'>
-            <span class='translation_missing' title='translation missing: ja.氏名'>
+            <span>
               <%= t('.name') %>
             </span>
           </th>
@@ -24,7 +24,7 @@
         </tr>
         <tr>
           <th scope='row'>
-            <span class='translation_missing' title='translation missing: ja.氏名'>
+            <span>
               <%= t('.profiles_image') %>
             </span>
           </th>
