--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -2,7 +2,7 @@
 <aside class='main-sidebar sidebar-dark-primary elevation-4'>
   <!-- Brand Logo -->
   <a class='brand-link' href='/admin'>
-    <%= image_tag 'logo.png' %>
+    <%= image_tag '/assets/AdminLTELogo-92af06833886bd48cb14b00faa6d70220b3eb7a651f12c5d6f38501ac910dd6b.png', class: 'img-circle elevation-2' %>
     <span class='brand-text font-weight-light'>AdminLTE 3</span>
   </a>
   <!-- Sidebar -->
