--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,5 +1,6 @@
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
+  <%= render 'shared/flash_message' %>
   <div class="container mb-5 pt-2">
     <h1>ユーザー一覧</h1>
     <div class="row">
