--- a/app/views/admin/layouts/admin.html.erb
+++ b/app/views/admin/layouts/admin.html.erb
@@ -8,13 +8,14 @@
   <%= stylesheet_link_tag 'admin', media: 'all' %>
   <%= javascript_include_tag 'admin' %>
 </head>
+<body>
 <body class='hold-transition sidebar-mini'>
 <div class='wrapper'>
   <%= render 'admin/shared/header' %>
   <%= render 'admin/shared/sidebar' %>
-  <%= render 'shared/flash_message' %>
   <%= yield %>
   <%= render 'admin/shared/footer' %>
 </div>
+</body>
 </body>
 </html>
