--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,5 +1,6 @@
 <!-- Content Wrapper. Contains page content -->
 <div class="content-wrapper">
+  <%= render 'shared/flash_message' %>
   <div class="container">
     <div class="row">
       <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
