--- a/app/views/admin/boards/_form.html.erb
+++ b/app/views/admin/boards/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @board, url: admin_board_path, local: true do |form| %>
+<%= form_with model: board, url: admin_board_path(board), local: true do |form| %>
   <%= render 'shared/errors_messages', model: form.object %>
   <div class='form-group'>
     <label for='board_title'><%= t('.title') %></label>
@@ -11,7 +11,7 @@
   <label for='board_image'><%= t('.image') %></label>
   <%= form.file_field :board_image, class: 'form-control', id: 'js-common-img' %>
   <div class='mt-3 mb-3'>
-    <%= image_tag @board.board_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
+    <%= image_tag board.board_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
   </div>
   <%= form.submit t('.update'), class: 'btn btn-primary' %>
 <% end %>
