--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @user, url: admin_user_path, local: true do |form| %>
+<%= form_with model: user, url: admin_user_path, local: true do |form| %>
   <%= render 'shared/errors_messages', model: form.object %>
   <div class='form-group'>
     <label for='user_email'><%= User.human_attribute_name(:email) %></label>
@@ -14,7 +14,7 @@
   </div>
   <%= form.file_field :user_image, class: 'form-control', id: 'js-common-img' %>
   <div class='mt-3 mb-3'>
-    <%= image_tag @user.user_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
+    <%= image_tag user.user_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
   </div>
   <div class='form-group'>
     <label for='user_role'><%= User.human_attribute_name(:role) %></label>
