--- a/app/views/admin/users/_user.html.erb
+++ b/app/views/admin/users/_user.html.erb
@@ -15,8 +15,8 @@
     <%= l user.created_at, format: :short %>
   </td>
   <td>
-    <%= link_to '編集', edit_admin_user_path(user.id), class: 'btn btn-success' %>
-    <%= link_to '削除', admin_user_path(user.id), class: 'btn btn-danger', data: {confirm: '本当に実行して大丈夫ですか?'}, method: :delete %>
+    <%= link_to '編集', edit_admin_user_path(user), class: 'btn btn-success' %>
+    <%= link_to '削除', admin_user_path(user), class: 'btn btn-danger', data: {confirm: '本当に実行して大丈夫ですか?'}, method: :delete %>
   </td>
 </tr>
 </tbody>
