--- a/app/views/user_mailer/reset_password_email.text.erb
+++ b/app/views/user_mailer/reset_password_email.text.erb
@@ -1,4 +1,4 @@
-<%= @user.last_name %><%= @user.first_name %> 様
+<%= @user.decorate.full_name %>様
 パスワード再発行のご依頼を受け付けました。
 こちらのリンクからパスワードの再発行を行ってください。
-<%= link_to @url, edit_password_reset_url(@user.reset_password_token) %>
+<%= @url %>
