--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,29 +3,29 @@
   <div class='row'>
     <div class='col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
       <h1><%= t('.user_create') %></h1>
-      <%= form_with model: @user, local: true do |form| %>
-        <%= render 'shared/errors_messages', model: form.object %>
+      <%= form_with model: @user, local: true do |f| %>
+        <%= render 'shared/errors_messages', model: f.object %>
         <div class='form-group'>
-          <label for='user_last_name'><%= User.human_attribute_name(:last_name) %></label>
-          <%= form.text_field :last_name, class: 'form-control', id: 'user_last_name' %>
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: 'form-control', id: 'user_last_name' %>
         </div>
         <div class='form-group'>
           <label for='user_first_name'><%= User.human_attribute_name(:first_name) %></label>
-          <%= form.text_field :first_name, class: 'form-control' ,id: 'user_first_name'%>
+          <%= f.text_field :first_name, class: 'form-control', id: 'user_first_name' %>
         </div>
         <div class='form-group'>
           <label for='user_email'><%= User.human_attribute_name(:email) %></label>
-          <%= form.email_field :email, class: 'form-control' ,id: 'user_email' %>
+          <%= f.email_field :email, class: 'form-control', id: 'user_email' %>
         </div>
         <div class='form-group'>
           <label for='user_password'><%= User.human_attribute_name(:password) %></label>
-          <%= form.password_field :password, class: 'form-control', id: 'user_password' %>
+          <%= f.password_field :password, class: 'form-control', id: 'user_password' %>
         </div>
         <div class='form-group'>
           <label for='user_password_confirmation'><%= User.human_attribute_name(:password_confirmation) %></label>
-          <%= form.password_field :password_confirmation, class: 'form-control', id: 'user_password_confirmation' %>
+          <%= f.password_field :password_confirmation, class: 'form-control', id: 'user_password_confirmation' %>
         </div>
-        <%= form.submit t('.register'), class: 'btn btn-primary' %>
+        <%= f.submit t('.register'), class: 'btn btn-primary' %>
       <% end %>
       <div class='text-center'>
         <%= link_to t('.login_page'), login_path %>
