--- a/app/views/admin/boards/_form.html.erb
+++ b/app/views/admin/boards/_form.html.erb
@@ -10,6 +10,7 @@
   </div>
   <label for='board_image'><%= t('.image') %></label>
   <%= form.file_field :board_image, class: 'form-control', id: 'js-common-img' %>
+  <%= form.hidden_field :board_image_cache %>
   <div class='mt-3 mb-3'>
     <%= image_tag board.board_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
   </div>
