--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -13,6 +13,7 @@
     <%= form.text_field :first_name, class: 'form-control' %>
   </div>
   <%= form.file_field :user_image, class: 'form-control', id: 'js-common-img' %>
+  <%= form.hidden_field :user_image_cache %>
   <div class='mt-3 mb-3'>
     <%= image_tag user.user_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
   </div>
