--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -1,14 +1,13 @@
-
 <div class='col-sm-12 col-md-6 col-lg-4 mb-3'>
   <div id=<%= "product-id-#{board.id}" %>>
     <div class='card'>
-      　<%= image_tag("#{board.board_image}", class: 'card-img-top', size: '300x200') %>
+      　<%= image_tag board.board_image_url, class: 'card-img-top', size: '300x200' %>
       <div class='card-body'>
         <h4 class='card-title'>
           <%= link_to board.title, board_path(board.id) %>
         </h4>
         <div class='d-inline float-right'>
-          <% if current_user.own_board?(board) %>
+          <% if current_user.own?(board) %>
             <%= render 'boards/edit_destroy_button', board: board %>
           <% else %>
             <%= render 'boards/bookmark_area', board: board %>
@@ -21,7 +20,7 @@
             <%= board.user_id %>
           </li>
           <li class='list-inline-item'>
-            <i class='fa fa-calendar'></i>
+            <%= icon 'far', 'calendar' %>
             <%= l board.created_at, format: :short %>
           </li>
         </ul>
