--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -1,16 +1,17 @@
-<%= form_with model: board, local: true do |form| %>
-  <%= render 'shared/errors_messages', model: form.object %>
+<%= form_with model: board, local: true do |f| %>
+  <%= render 'shared/errors_messages', model: f.object %>
   <div class='form-group'>
-    <label for='board_title'><%= t('.boards_title') %></label>
-    <%= form.text_field :title, class: 'form-control', id: 'board_title' %>
+    <%= f.label :title %>
+    <%= f.text_field :title, class: 'form-control', id: 'board_title' %>
   </div>
   <div class='form-group'>
-    <label for='board_body'><%= t('.boards_text') %></label>
-    <%= form.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
+    <%= f.label :body %>
+    <%= f.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
   </div>
-  <%= form.file_field :board_image, class: 'form-control', id: 'js-common-img' %>
+  <%= f.file_field :board_image, class: 'form-control', id: 'js-common-img' %>
+  <%= f.hidden_field :board_image_cache %>
   <div class='mt-3 mb-3'>
     <%= image_tag board.board_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
   </div>
-  <%= form.submit t('.boards_post'), class: 'btn btn-primary' %>
+  <%= f.submit t('.boards_post'), class: 'btn btn-primary' %>
 <% end %>
