--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,6 +1,6 @@
 <tr id="comment-<%= comment.id %>">
   <td style='width: 60px'>
-    <%= image_tag('sample.jpg', class: 'rounded-circle', width: '50', height: '50') %>
+    <%= image_tag comment.user.user_image.url, class: 'rounded-circle', size: '50x50' %>
   </td>
   <td>
     <h3 class='small'><%= comment.user.last_name %><%= comment.user.first_name %></h3>
@@ -16,7 +16,7 @@
     </div>
   </td>
   <!-- ボタン-->
-  <% if comment.user_id == current_user.id %>
+  <% if current_user.own?(comment) %>
     <td class='action'>
       <ul class='list-inline justify-content-center' style='float: right;'>
         <li class='list-inline-item'>
