--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -2,11 +2,11 @@
   <div class='row'>
     <div class=' col-md-10 offset-md-1 col-lg-8 offset-lg-2'>
       <h1>パスワードリセット申請</h1>
-      <%= form_with url: password_resets_path, local: true, method: :post do |form| %>
+      <%= form_with url: password_resets_path, local: true, method: :post do |f| %>
         <div class="field">
-          <%= form.label :メールアドレス %>
-          <%= form.text_field :email, class: 'form-control' %>
-          <%= form.submit '送信', class: 'btn btn-primary' %>
+          <%= f.label :メールアドレス %>
+          <%= f.text_field :email, class: 'form-control' %>
+          <%= f.submit '送信', class: 'btn btn-primary' %>
         </div>
       <% end %>
     </div>
