--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -3,25 +3,26 @@
   <div class='row'>
     <div class='col-lg-8 offset-lg-2'>
       <h1><%= t('.profiles_edit') %></h1>
-      <%= form_with(model: @user, url: profile_path, local: true) do |form| %>
-        <%= render 'shared/errors_messages', model: form.object %>
+      <%= form_with(model: @user, url: profile_path, local: true) do |f| %>
+        <%= render 'shared/errors_messages', model: f.object %>
         <div class='form-group'>
-          <label for='user_email'><%= User.human_attribute_name(:email) %></label>
-          <%= form.email_field :email, class: 'form-control' %>
+          <%= f.label :email %>
+          <%= f.email_field :email, class: 'form-control' %>
         </div>
         <div class='form-group'>
-          <label for='user_last_name'><%= User.human_attribute_name(:last_name) %></label>
-          <%= form.text_field :last_name, class: 'form-control' %>
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, class: 'form-control' %>
         </div>
         <div class='form-group'>
-          <label for='user_first_name'><%= User.human_attribute_name(:first_name) %></label>
-          <%= form.text_field :first_name, class: 'form-control' %>
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, class: 'form-control' %>
+          <%= f.hidden_field :user_image_cache %>
         </div>
-        <%= form.file_field :user_image, class: 'form-control', id: 'js-common-img' %>
+        <%= f.file_field :user_image, class: 'form-control', id: 'js-common-img' %>
         <div class='mt-3 mb-3'>
           <%= image_tag current_user.user_image.url, class: 'rounded-circle', id: 'js-img-prev', size: '100x100' %>
         </div>
-        <%= form.submit t('.update'), class: 'btn btn-primary' %>
+        <%= f.submit t('.update'), class: 'btn btn-primary' %>
       <% end %>
     </div>
   </div>
