--- a/app/views/admin/boards/index.html.erb
+++ b/app/views/admin/boards/index.html.erb
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <div class="container mb-5 pt-2">
-    <h1>掲示板一覧</h1>
+    <h1>投稿一覧</h1>
     <div class="row">
       <div class="col-md-12 mb-3">
         <%= search_form_for @search, url: admin_boards_path do |f| %>
