--- a/app/views/boards/_board.html.erb
+++ b/app/views/boards/_board.html.erb
@@ -5,26 +5,32 @@
       <div class='card-body'>
         <h4 class='card-title'>
           <%= link_to board.title, board_path(board.id) %>
+          <div class='d-inline float-right'>
+            <% if current_user.own?(board) %>
+              <%= render 'boards/edit_destroy_button', board: board %>
+            <% else %>
+              <%= render 'boards/bookmark_area', board: board %>
+            <% end %>
+          </div>
         </h4>
-        <div class='d-inline float-right'>
-          <% if current_user.own?(board) %>
-            <%= render 'boards/edit_destroy_button', board: board %>
-          <% else %>
-            <%= render 'boards/bookmark_area', board: board %>
-          <% end %>
-        </div>
-
-        <ul class='list-inline'>
-          <li class='list-inline-item'>
+        <ul class="list-group list-group-flush">
+          <li class='list-group-item'>
             <i class='fa fa-user'></i>
-            <%= board.user_id %>
+            <%= board.user.decorate.full_name %>
           </li>
-          <li class='list-inline-item'>
+          <li class='list-group-item'>
             <%= icon 'far', 'calendar' %>
             <%= l board.created_at, format: :short %>
           </li>
+            <li class='list-inline-item text-info font-weight-bold'>
+              投稿の内容
+              <li class='list-inline-item'>
+                <%= truncate(board.body) do %>
+                  <p class='card-text'>(続きを読むには<%= link_to 'ここ', board_path(board.id) %>をクリックしてください。)<p>
+                <% end %>
+              </li>
+            </li>
         </ul>
-        <p class='card-text'><%= board.body %></p>
       </div>
     </div>
   </div>
