--- a/app/views/boards/_unbookmark.html.erb
+++ b/app/views/boards/_unbookmark.html.erb
@@ -1,5 +1,5 @@
 <div id='bookmark_btn_<%= board.id %>'>
   <%= link_to bookmark_path(board), method: :delete, remote: true do %>
-    <%= icon 'fas', 'star' %>
+    <%= icon 'fas', 'heart' %>
   <% end %>
 </div>
