--- a/app/assets/stylesheets/top.scss
+++ b/app/assets/stylesheets/top.scss
@@ -1,21 +1,327 @@
-.top-wrapper {
-  background-image: image-url("top.jpg");
-  height: calc(100vh - 134px);
-  position: relative;
-  background-position: center;
+.alert {
+  margin-bottom: 0;
+  position: fixed;
+  width: 100%;
+  z-index: 10000;
+}
 
-  .top-inner-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    text-align: center;
-    font-size: 3rem;
-    color: white;
+#logo {
+  float: left;
+  font-family: 'Economica', sans-serif;
+  margin-right: 10px;
+  margin-left: 20px;
+  font-size: 2em;
+  color: #fff;
+  padding-top: 12px;
+  font-weight: bold;
+  line-height: 1;
+  opacity: 0.8;
+}
 
-    @media screen and (max-width: 767px) {
-      font-size: 2.0rem;
+#logo:hover {
+  color: #fff;
+  opacity: 0.4;
+}
+
+.wrapper {
+  margin-top: 150px;
+}
+@import url('https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c&display=swap');
+
+body {
+  letter-spacing: -0.04em;
+  background-color: #fafafa;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
+  color: #000000;
+  height: 100vh;
+  width: 100vw;
+
+  .btn {
+    a {
+      font-size: 15px;
     }
   }
+}
+
+.icon {
+  img {
+    height: 30%;
+  }
+}
+
+.current-user-image {
+  display: flex;
+  padding-top: 10px;
+
+  img {
+    width: 30px;
+    height: 30px;
+    border-radius: 20%;
+  }
+
+  a {
+    font-weight: bold;
+    padding: 5px 0 0 2px;
+  }
+}
+
+.top-wrapper {
+  width: 100vw;
+  height: 100vh;
+  color: #fafafa;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: image-url("top.jpg");
+
+  .top-container {
+    padding-top: 300px;
+
+    .top-logo p {
+      font-size: 18px;
+      letter-spacing: -0.1em;
+      opacity: 0.9;
+    }
+
+    .top-login {
+      .btn-danger {
+        margin-right: 10px;
+        margin-bottom: 5px;
+      }
+
+      .btn-success {
+        margin-bottom: 5px;
+      }
+
+      .btn {
+        font-size: 15px;
+        border-radius: 3%;
+        opacity: 0.8;
+      }
+    }
+
+    .twitter-login {
+      margin-top: 15px;
+    }
+  }
+}
+
+.form-control {
+  height: 45px;
+}
+
+.navbar {
+  margin-bottom: 0;
+  margin-right: 10px;
+  width: 100vw;
+
+  .nav a {
+    color: #000000!important;
+    font-size: 15px;
+    text-decoration: none;
+  }
+
+  .nav a:hover {
+    opacity: 0.4;
+  }
+
+  .navbar-collapse {
+    margin-right: 40px;
+  }
+
+  .navbutton {
+    color: #000000;
+  }
+}
+
+.users-new-wrapper {
+  padding-top: 50px;
+  padding-bottom: 50px;
+
+  .btn {
+    margin-bottom: 20px;
+  }
+}
+
+.user-contents-container {
+  background-color: #fff;
+  padding-bottom: 40px;
+  padding-top: 40px;
+
+  .introduction {
+    p {
+      font-size: 13px;
+      text-align: left;
+    }
+  }
+
+  .user-image {
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    img {
+      width: 150px;
+      height: 150px;
+      border-radius: 15%;
+      box-shadow: 0 0 8px gray;
+    }
+  }
+}
+
+.post-user-image {
+  img {
+    display: flex;
+    width: 40px;
+    height: 40px;
+    border-radius: 20%;
+  }
+
+  .star {
+    img {
+      weight: 20px;
+      height: 20px;
+    }
+  }
+}
+
+.post-list-container {
+  padding: 30px;
+  background-color: #FFFFFF;
+  border: 1px solid #e6ecf0;
+  border-radius: 3px;
+  margin-bottom: 10px;
+
+  .post-user-name a {
+    font-size: 13px;
+  }
+
+  .post-info {
+    p {
+      font-size: 10px;
+      color: #999999;
+      padding-top: 10px;
+    }
+  }
+
+  .post-title {
+    font-size: 12px;
+  }
+
+  .post-body {
+    font-size: 15px;
+  }
+
+  .post-img {
+    img {
+      margin-top: 10px;
+      width: 100%;
+      border-radius: 1%;
+    }
+  }
+
+  .post-map {
+    margin-top: 20px;
+  }
+
+  .post-star {
+    img {
+      height: 20px;
+    }
+  }
+
+  .star {
+    display: flex;
+  }
+}
+
+.posts-new-container {
+  .new-post-star {
+    img {
+      height: 25px;
+    }
+  }
+}
+
+.users-list-container {
+  padding-bottom: 15px;
+
+  p {
+    margin-bottom: -1px;
+  }
+
+  a {
+    font-size: 15px;
+  }
+
+  img {
+    width: 80px;
+    height: 80px;
+    border-radius: 10%;
+    box-shadow: 0 0 8px gray;
+  }
+
+  .users-list-card {
+    margin-bottom: 20px;
+  }
+}
+
+.like {
+  a {
+    color: #8899a6;
+  }
+}
+
+.unlike {
+  a {
+    color: #ff2581;
+  }
+
+  p {
+    color: #ff2581;
+    font-size: 15px;
+  }
+}
+
+#gmap {
+  height: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: left;
+  width: 80%;
+}
+
+.pagetop {
+  display: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
+.pagetop a {
+  display: block;
+  background-color: #ccc;
+  text-align: center;
+  color: #222;
+  font-size: 12px;
+  text-decoration: none;
+  padding: 20px 10px;
+}
+
+.pagetop a:hover {
+  display: block;
+  background-color: #222;
+  text-align: center;
+  color: #fff;
+  font-size: 12px;
+  text-decoration: none;
+  padding: 20px 10px;
+}
+
+footer {
+  padding-top: 20px;
+  color: #C0C0C0;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
 }
