--- a/app/views/admin/boards/edit.html.erb
+++ b/app/views/admin/boards/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-      <h1>掲示板編集</h1>
+      <h1>投稿の編集</h1>
       <%= render 'form', board: @board %>
     </div>
   </div>
