--- a/app/views/admin/boards/show.html.erb
+++ b/app/views/admin/boards/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-      <h1>掲示板詳細</h1>
+      <h1>投稿の詳細</h1>
       <div class="text-right mb-3">
         <%= link_to '編集', edit_admin_board_path(@board.id), class: 'btn btn-success' %>
         <%= link_to '削除', admin_board_path(@board.id), class: 'btn btn-danger', data: {confirm: '本当に実行して大丈夫ですか?'}, method: :delete %>
