--- a/app/views/admin/shared/_sidebar.html.erb
+++ b/app/views/admin/shared/_sidebar.html.erb
@@ -28,7 +28,7 @@
           <%= link_to admin_boards_path, class: "nav-link #{active('admin/boards')}" do %>
             <i class='nav-icon fa fa-file-o'></i>
             <p>
-              掲示板一覧
+              投稿一覧
             </p>
           <% end %>
         </li>
