--- a/app/views/boards/_form.html.erb
+++ b/app/views/boards/_form.html.erb
@@ -6,7 +6,13 @@
   </div>
   <div class='form-group'>
     <%= f.label :body %>
-    <%= f.text_area :body, class: 'form-control', row: '10', heigth: '200px', id: 'board_body' %>
+    <%= f.text_area :body, class: 'form-control', row: '10', heigth: '400px', id: 'board_body',
+        'data-toggle': :tooltip, 'data-placement': :right, placeholder: "例：実務未経験者がエンジニアになるために必要なこと５選を紹介する動画",
+        'title': '右下をドラッグで引っ張ると枠が広がります。ここにリクエストやアイデアの内容を記載してください。' %>
+    <%= f.label :identifier %>
+    <%= f.text_area :identifier, class: 'form-control', row: '10', heigth: '100px', id: 'board_identifier',
+        'data-toggle': :tooltip, 'data-placement': :right,
+        'title': '参考動画があれば、youtubeの埋め込みIDを入れてください。' %>
   </div>
   <%= f.file_field :board_image, class: 'form-control', id: 'js-common-img' %>
   <%= f.hidden_field :board_image_cache %>
@@ -15,3 +21,10 @@
   </div>
   <%= f.submit t('.boards_post'), class: 'btn btn-primary' %>
 <% end %>
+<script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+<script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+<script type="text/javascript">
+  $(function () {
+    $('[data-toggle="tooltip"]').tooltip();
+  });
+</script>
