--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for(:title, '掲示板一覧') %>
+<% content_for(:title, '投稿一覧') %>
 <div class='container pt-3'>
   <div class='row'>
     <div class='col-lg-10 offset-lg-1'>
@@ -6,12 +6,12 @@
       <%= render 'search_form', url: boards_path, search: @search %>
     </div>
   </div>
-  <!-- 掲示板一覧 -->
+  <!-- 投稿一覧 -->
   <div class='row'>
     <div class='col-12'>
       <div class='row'>
         <% if @boards.empty? %>
-          <%= '掲示板はありません' %>
+          <%= '投稿はありません' %>
         <% else %>
           <%= render @boards %>
         <% end %>
