--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
     </div>
     <!--    フォーム部分-->
     <div style='display: none;' id='js-textarea-comment-box-<%= comment.id %>'>
-      <textarea id='js-textarea-comment-<%= comment.id %>' , class='form-control mb-1'><%= comment.body %></textarea>
+      <textarea id='js-textarea-comment-<%= comment.id %>', class='form-control mb-1'><%= comment.body %></textarea>
       <button class='btn btn-light js-button-comment-update' data-comment-id='<%= comment.id %>'>更新</button>
       <button class='btn btn-success js-button-edit-comment-cancel' data-comment-id='<%= comment.id %>'>キャンセル</button>
     </div>
@@ -20,7 +20,7 @@
     <td class='action'>
       <ul class='list-inline justify-content-center' style='float: right;'>
         <li class='list-inline-item'>
-          <button data-id='<%= comment.id %>' class='btn js-edit-comment-button'><i class='fa fa-pencil'></i></button>
+          <button data-id='<%= comment.id %>' class='btn js-edit-comment-button'><i class='fas fa-edit text-primary'></i></button>
         </li>
         <li class='list-inline-item'>
           <%= link_to comment_path(comment.id), method: :delete, remote: true do %>
