--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,6 +1,55 @@
 <% content_for(:title, 'トップ') %>
-<div class='top-wrapper'>
-  <div class='top-inner-text'>
-    <h1>RUNTEQ BOARD APP</h1>
+<div class="top-wrapper">
+  <div class="container top-container">
+    <div class="row">
+    <div class="card-body offset-md-2 col-md-8 text-center">
+      <div class="top-logo">
+        <p class="logo">動画製作のリクエスト・アイデアを投稿するサービスです！<br>
+          誰もがバズ動画のプロデューサーになれるチャンスですので、どんどん思いついたリクエストやアイデアを投稿しよう！！</p>
+      </div>
+    </div>
+    <% if !current_user %>
+      <div class="top-login offset-md-4 col-md-5 text-center">
+        <p class="top-btn">
+          <%= link_to "ログイン",login_path, class: "btn btn-danger" %>
+          <%= link_to "新規登録",new_user_path, class: "btn btn-success" %>
+          <%= form_with url: login_path, model: @user, local: true do |f| %>
+            <%= f.hidden_field :email, {value: 'test@test.jp'} %>
+            <%= f.hidden_field :password, {value: 'test1234'} %>
+            <%= f.submit "テストユーザーとしてログイン", class: "btn btn-info", 'data-toggle': :tooltip, 'data-placement': :right, 'title': 'ポートフォリオとして見る方はこちらから' %>
+          <% end %>
+        </p>
+      </div>
+      <div class="top-login offset-md-4 col-md-5 text-center">
+        <p class="top-btn">
+      <%= link_to auth_at_provider_path(provider: :facebook), class: "btn facebook-button" do %>
+        <i class="fab fa-facebook-f">
+        </i>
+        Facebookログイン
+      <% end %>
+        </p>
+      </div>
+    <% end %>
+    <script type="text/javascript" src="js/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="js/bootstrap.bundle.js"></script>
+    <script type="text/javascript">
+      $(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
+    <script>
+      $('.btn').hover(
+        function(){
+          $(this).animate({
+            'font-size':'18px'
+          }, 100);
+        },
+        function(){
+          $(this).animate({
+            'font-size':'15px'
+          }, 100);
+        });
+    </script>
+</div>
   </div>
 </div>
