--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -23,7 +23,7 @@
         </li>
 
         <li class='nav-item'>
-          <%= link_to 'Myいいね', bookmarks_boards_path, class:"fa fa-heart", 'data-toggle': :tooltip, 'data-placement': :bottom, 'title': 'あなたが「いいね」した投稿一覧' %>
+          <%= link_to 'お気に入り', bookmarks_boards_path, class:"fa fa-heart", 'data-toggle': :tooltip, 'data-placement': :bottom, 'title': 'あなたが「お気に入り」した投稿一覧' %>
         </li>
         <li class='nav-item'>
         <%= link_to "ユーザー一覧", users_path, class:"fas fa-user", 'data-toggle': :tooltip, 'data-placement': :bottom, 'title': '本サービスに登録しているユーザーの一覧' %>
